# exOS-ComponentExtension

./: .gitignore  extension.js  package-lock.json  package.json
n-api/: README.md  exos_napi.js
n-api/example/: index.js  package.json
n-api/example/AS/: exosTest.apj
n-api/example/AS/Logical/: Package.pkg
n-api/example/AS/Logical/DataX/: DataX.exospkg  Package.pkg
n-api/example/AS/Logical/DataX/DataX/: ANSIC.lby  DataX.fun  DataX.typ  datax.c
n-api/example/AS/Logical/DataX/DataX_0/: DataX.st  DataX.var  IEC.prg
n-api/example/AS/Logical/DataX/Linux/: CMakeLists.txt  Package.pkg  build.sh  datax.c  exar-datax-1.0.0.deb  exos-comp-datax-1.0.0.deb  exos_datax.h
n-api/example/AS/Logical/Libraries/: Package.pkg
n-api/example/AS/Logical/Libraries/ArEventLog/: binary.lby
n-api/example/AS/Logical/Libraries/AsIOTime/: binary.lby
n-api/example/AS/Logical/Libraries/AsIecCon/: binary.lby
n-api/example/AS/Logical/Libraries/AsTCP/: binary.lby
n-api/example/AS/Logical/Libraries/ExApi/: Binary.lby  ExApi.fun  Types.typ
n-api/example/AS/Logical/Libraries/ExApi/SG4/: ExApi.br  ExApi.h  ExHeapRedirect.c  exos_api.h  exos_api_internal.h  exos_log.h  exos_log_console.h  exos_mem.h  lxi.h  zmq.h
n-api/example/AS/Logical/Libraries/ExTarget/: Binary.lby  ExTarget.fun  Types.typ
n-api/example/AS/Logical/Libraries/ExTarget/SG4/: ExTarget.br  ExTarget.h
n-api/example/AS/Logical/Libraries/FileIO/: binary.lby
n-api/example/AS/Logical/Libraries/astime/: binary.lby
n-api/example/AS/Logical/Libraries/operator/: binary.lby
n-api/example/AS/Logical/Libraries/runtime/: binary.lby
n-api/example/AS/Logical/Libraries/standard/: binary.lby
n-api/example/AS/Logical/Libraries/sys_lib/: binary.lby
n-api/example/AS/Logical/MyApp/: MyApp.exospkg  Package.pkg
n-api/example/AS/Logical/MyApp/Linux/: CMakeLists.txt  Package.pkg  build.sh  libmyapp.c  libmyapp.h  libmyapp.i  myapp.py
n-api/example/AS/Logical/MyApp/MyApp/: IEC.prg  MyApp.st  MyApp.var
n-api/example/AS/Logical/MyApp/libMyApp/: ANSIC.lby  MyApp.typ  exos_myapp.h  libMyApp.fun  myapp.c
n-api/example/AS/Logical/NodeJS/: NodeJS.exospkg  Package.pkg
n-api/example/AS/Logical/NodeJS/Linux/: CMakeLists.txt  Package.pkg  exos_nodejs.h  libnodejs.h  nodejs.py
n-api/example/AS/Logical/NodeJS/NodeJS/: ANSIC.prg  NodeJS.typ  Variables.var  main.c
n-api/example/AS/Logical/NodeJS/libNodeJS/: ANSIC.lby  exos_nodejs.h  libnodejs.c  libnodejs.h
n-api/example/AS/Logical/SimPanel/: Package.pkg  SimPanel.exospkg
n-api/example/AS/Logical/SimPanel/Linux/: CMakeLists.txt  Package.pkg  exar-simpanel-1.0.0.deb  exos-comp-simpanel-1.0.0.deb  exos_simpanel.h  simpanel.c  termination.c
n-api/example/AS/Logical/SimPanel/SimPanel/: ANSIC.lby  SimPanel.fun  SimPanel.typ  exos_simpanel.h  simpanel.c
n-api/example/AS/Logical/SimPanel/SimPanel_0/: IEC.prg  SimPanel.st  SimPanel.var
n-api/example/AS/Physical/: Physical.pkg
n-api/example/AS/Physical/Config1/: Config.pkg  Hardware.hw  Hardware.hwl
n-api/example/AS/Physical/Config1/5APC2200_AL18_000/: Cpu.pkg  Cpu.sw
n-api/example/AS/Physical/Config1/5APC2200_AL18_000/AccessAndSecurity/: Package.pkg
n-api/example/AS/Physical/Config1/5APC2200_AL18_000/AccessAndSecurity/CertificateStore/: Package.pkg
n-api/example/AS/Physical/Config1/5APC2200_AL18_000/Connectivity/: Package.pkg
n-api/example/AS/Physical/Config1/5APC2200_AL18_000/TextSystem/: Package.pkg
n-api/example/AS/Physical/Config1/5APC2200_AL18_000/UnitSystem/: Package.pkg
n-api/example/AS/Physical/Config1/5APC2200_AL18_000/exosTechnology/: Package.pkg  components.exoscomponent  targets.exostarget
n-api/example/MyApp/: binding.gyp  exos_myapp.h  index.js  libmyapp.c  package.json
n-api/example/NodeJS/: binding.gyp  index.js  libnodejs.cpp  libnodejs.i  package-lock.json
n-api/example/simpanel/: binding.gyp  exos_simpanel.h  index.js  simpanel.c
njs-template/: SimPanel.typ  exos_template.js  exos_template_linux.js
src/: datamodel.js  exospkg.js
src/JuliaFiles/: EXOS.jl  Manifest.toml  Project.toml  api.jl  enums.jl  types.jl
src/components/: exoscomponent.js  exoscomponent_ar.js  exoscomponent_jlt.js  exoscomponent_julia.js
src/components/templates/: template.js
src/components/templates/ar/: template_ar_dynamic.js
src/components/templates/linux/: template_linux_build.js  template_linux_jlt.js  template_linux_julia.js
test/suite/AS/Project/Logical/: Package.pkg
test/suite/AS/Project/Logical/BufferedFub/: Package.pkg
test/suite/AS/Project/Logical/BufferedFub/BufferFub2_c-api_c-api/: BufferFub2.exospkg  Package.pkg
test/suite/AS/Project/Logical/BufferedFub/BufferFub2_c-api_c-api/Linux/: CMakeLists.txt  Package.pkg  bufferfub2  bufferfub2.c  build.sh  exos_bufferfub2.c  exos_bufferfub2.h
test/suite/AS/Project/Logical/BufferedFub/BufferFub_c-api_c-api/: BufferFub.exospkg  Package.pkg
test/suite/AS/Project/Logical/BufferedFub/BufferFub_c-api_c-api/Linux/: build.sh  (+1 more)
test/suite/AS/Project/Logical/BufferedFub/BufferFub_c-static_c-api/Linux/: CMakeLists.txt
test/suite/AS/Project/Logical/BufferedFub/BufferFub_cpp_c-api/: BufferFub.exospkg  Package.pkg
test/suite/AS/Project/Physical/: Physical.pkg
test/suite/AS/Project/Physical/BufferedFub/: Hardware.hw  Hardware.hwl
test/suite/AS/Project/Physical/BufferedFub/PC/: Cpu.pkg  Cpu.sw
test/suite/buffered_fub/: buffered.fub.test.js
test/suite/buffered_fub/develop/BufferFub_c-api_c-api/BufferFub/: ANSIC.lby
test/suite/buffered_fub/develop/BufferFub_c-static_c-api/: BufferFub.exospkg
test/suite/buffered_fub/develop/BufferFub_c-static_c-api/BufferFub/: ANSIC.lby  BufferFub.fun  libbufferfub.c
test/suite/buffered_fub/develop/BufferFub_c-static_c-api/BufferFub_0/: BufferFub.st  BufferFub.var  IEC.prg
test/suite/buffered_fub/develop/BufferFub_cpp_c-api/BufferFub/: ANSIC.lby  BufferFubDatamodel.cpp  BufferFubDatamodel.hpp  BufferFubDataset.hpp  BufferFubLogger.cpp  bufferfub.cpp
test/suite/buffered_fub/develop/BufferFub_cpp_c-api/Linux/: Package.pkg  bufferfub.c
xmler/: fromtyp.json  fromxml.json  index.js  package-lock.json  package.json
(+42 files in other folders)
