cmake_minimum_required(VERSION 3.0)

project(libMyApp)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

set(MYAPP_SOURCES
    "libmyapp.i"
    "libmyapp.c")

SET_SOURCE_FILES_PROPERTIES(${MYAPP_SOURCES} PROPERTIES CPLUSPLUS ON)

SWIG_ADD_MODULE(libMyApp python ${MYAPP_SOURCES})
SWIG_LINK_LIBRARIES(libMyApp ${PYTHON_LIBRARIES} zmq exos-api)

SET(MYAPP_MODULE_FILES
    "build/_libMyApp.so"
    build/libMyApp.py)

install(FILES ${MYAPP_MODULE_FILES} DESTINATION /home/user/myapp)

set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME exos-comp-myapp)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "myapp summary")
set(CPACK_PACKAGE_DESCRIPTION "Some description")
set(CPACK_PACKAGE_VENDOR "Your Organization")

set(CPACK_PACKAGE_VERSION_MAJOR 1)
set(CPACK_PACKAGE_VERSION_MINOR 0)
set(CPACK_PACKAGE_VERSION_PATCH 0)
set(CPACK_PACKAGE_FILE_NAME exos-comp-myapp-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "your name")

set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

include(CPack)

