cmake_minimum_required(VERSION 3.0)

project(nodejs C)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

set(NODEJS_SOURCES
    "libnodejs.i"
    "libnodejs.c")

SWIG_ADD_MODULE(libNodeJS python ${NODEJS_SOURCES})
SWIG_LINK_LIBRARIES(libNodeJS ${PYTHON_LIBRARIES} zmq exos-api)

SET(NODEJS_MODULE_FILES
    "nodejs.py"
    "build/_libNodeJS.so"
    build/libNodeJS.py)

install(FILES ${NODEJS_MODULE_FILES} DESTINATION /home/user/nodejs)

set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME exos-comp-nodejs)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "nodejs summary")
set(CPACK_PACKAGE_DESCRIPTION "Some description")
set(CPACK_PACKAGE_VENDOR "Your Organization")

set(CPACK_PACKAGE_VERSION_MAJOR 1)
set(CPACK_PACKAGE_VERSION_MINOR 0)
set(CPACK_PACKAGE_VERSION_PATCH 0)
set(CPACK_PACKAGE_FILE_NAME exos-comp-nodejs-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "your name")

set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

include(CPack)

